@@ -1,14 +1,10 @@
 package com.peach.openfeign.constant;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 /**
- * OpenFeign 模块公共常量。
- *
+ * PeachOpenFeign常量。
  * <p>集中定义服务间调用需要传播的 RequestId、重试默认值与异常响应文案。</p>
- *
  * <p>该类只提供跨组件共享的稳定值，不承载动态配置或业务决策逻辑。</p>
  *
  * @Author Mr Shu
@@ -33,29 +29,29 @@ public final class PeachOpenfeignConstants {
 
     public static final int MAX_SAME_TOKEN_LENGTH = 4096;
 
-    public static final List<String> DEFAULT_RETRY_READ_METHODS = Collections.unmodifiableList(Arrays.asList(
+    public static final List<String> DEFAULT_RETRY_READ_METHODS = List.of(
             "GET",
             "HEAD"
-    ));
+    );
 
-    public static final List<Integer> DEFAULT_RETRYABLE_STATUSES = Collections.unmodifiableList(Arrays.asList(
+    public static final List<Integer> DEFAULT_RETRYABLE_STATUSES = List.of(
             429,
             503,
             504
-    ));
+    );
 
-    public static final List<String> DEFAULT_RETRYABLE_EXCEPTIONS = Collections.unmodifiableList(Arrays.asList(
+    public static final List<String> DEFAULT_RETRYABLE_EXCEPTIONS = List.of(
             "java.net.ConnectException",
             "java.net.SocketTimeoutException",
             "java.net.UnknownHostException",
             "feign.RetryableException"
-    ));
+    );
 
-    public static final List<String> DEFAULT_PRODUCTION_PROFILES = Collections.unmodifiableList(Arrays.asList(
+    public static final List<String> DEFAULT_PRODUCTION_PROFILES = List.of(
             "prod",
             "production",
             "docker"
-    ));
+    );
 
     public static final String MESSAGE_UPLOAD_TOO_LARGE = "上传文件过大，请改用直传方案";
 
