@@ -73,7 +73,7 @@ public class OpenApiConfig {
                                 .in(SecurityScheme.In.HEADER)
                                 .description("Referer 引用来源"))
                 );
-        if (serverUrl != null && !serverUrl.trim().isEmpty()) {
+        if (serverUrl != null && !serverUrl.isBlank()) {
             openAPI.servers(List.of(new Server()
                     .url(serverUrl.trim())
                     .description(serverDescription)));
